Trouble with hidden overflow has been fixed

--- a/index_page/style.css
+++ b/index_page/style.css
@@ -2,7 +2,6 @@ html,
 body {
 	padding: 0;
 	margin: 0;
-	overflow: hidden;
 }
 
 body {
@@ -23,11 +22,11 @@ body {
 
 .content {
 	flex: 1 0 auto;
-	width: 100vw;
+	max-width: 100vw;
 }
 
 .naming {
-	width: 100%;
+	max-width: 100%;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -49,7 +48,7 @@ body {
 }
 
 .tagline>a {
-	width: 100%;
+	max-width: 100%;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
@@ -103,7 +102,7 @@ body {
 	display: -o-flex;
 	display: flex;
 	justify-content: space-between;
-	width: 100%;
+	max-width: 100%;
 	margin: 0 auto;
 }
 
@@ -181,7 +180,7 @@ body {
 
 @media (max-width: 1550px) {
 	.content {
-		width: 100%;
+		max-width: 100%;
 	}
 
 	.naming,
@@ -219,7 +218,7 @@ body {
 @media (max-width: 1100px) {
 	.navigation-menu__list {
 		flex-direction: column;
-		width: 100%;
+		max-width: 100%;
 	}
 
 	.navigation-menu__list--item:first-child {
